--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ python-dotenv
 PyPDF2
 langchain
 langchain-community
-langchain-core
+langchain-core 0.1.4 
 langchain-text-splitters
 langchain-pinecone
 langchain-mistralai
